--- a/index.css
+++ b/index.css
@@ -334,3 +334,173 @@ body
 }
 
 
+@media screen and (min-width:330px) and (max-width:604px) {
+
+    body
+{
+  background-color:rgb(223, 221, 221);
+}
+
+.p
+{
+    
+    margin-top: -70px;
+    margin-left: -80px;
+}
+
+.main{
+
+    margin-top: 80px;
+    margin-left: 20px;
+    background-color : white;
+    padding: 100px;
+    width: 80px;
+    height:300px;
+
+   
+}
+
+.text
+{
+    font-family: sans-serif;
+    font-stretch: ultra-condensed;
+    color: darkgray;
+    
+}
+
+
+
+
+.plus
+{
+    border: 0px solid;
+    background-color: crimson;
+    height: 33px;
+    width: 33px;
+    border-radius: 25px;
+    margin-top: -35px;
+    margin-left: 118px;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 30px;
+    color: white;
+}
+
+.alldiv
+{
+    height: 40px;
+    width: 200px;
+    margin-left: -80px;
+    margin-top: 30px;
+    border-radius: 10px;
+    border:1px solid rgb(216, 205, 205);
+    box-shadow: 7px 6px rgb(211, 204, 204);
+    display: inline-block;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-stretch: ultra-condensed;
+    color: darkgray;
+    line-height: 10px;
+    word-wrap: break-word;
+    white-space: pre;
+    padding-top: 4px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.tripp
+{
+  text-decoration: none;
+  font-size: 20px;
+  font-family: sans-serif;
+  font-stretch: ultra-condensed;
+  color: darkgray;
+}
+
+.todo2
+{
+    margin-top: 30px;
+}
+
+.todo3
+{
+    margin-top: 30px;
+}
+.todo4
+{
+    margin-top: 30px;
+}
+.todo5
+{
+    margin-top: 30px;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .overlay:target {
+    visibility: visible;
+    opacity: 1;
+  }
+
+
+  .popup {
+    border: 2px solid tomato;
+    margin: 210px 60px auto;
+    padding: 40px;
+    background: #fff;
+    border-radius: 5px;
+    height:100px;
+    width: 100px;
+    position: relative;
+    transition: all 5s ease-in-out;
+    text-align: center;
+  }
+
+ .newlist{
+    margin: -10px  auto;
+     text-align: center;
+     font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: tomato;
+ }
+
+
+ .area{
+
+    border-radius: 3px;
+    border: 1px solid tomato;
+    width: 100px;
+    height: 30px;
+    text-decoration: none;
+    margin-left: 4px;
+
+}
+
+.button
+{
+    position: absolute;
+    border-radius: 30px;
+    background-color: orangered;
+    color: white;
+    width: 75px;
+    height: 30px;
+    font-size: 20px;
+    border-color: snow;
+    text-align: center;
+    margin-left: -30px;
+
+}
+
+}
+
+
