--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body
 {
     margin-top: 10px;
     margin-left: 10px;
-    background-color: rgb(199, 187, 187);
+    background-color: #FAFAFA;
 }
 .p
 {
