--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body
 {
     margin-top: 10px;
     margin-left: 10px;
-    background-color: #FAFAFA;
+    background-color: rgb(199, 187, 187);
 }
 .p
 {
@@ -15,7 +15,7 @@ body
 
     margin-top: 10px;
     margin-left: 10px;
-    background-color: white;
+    background-color: rgba(236, 226, 226, 0.966);
     padding: 100px;
     width: 1250px;
     height:500px;
