--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body
 
     margin-top: 10px;
     margin-left: 10px;
-    background-color: rgba(206, 189, 189, 0.966);
+    background-color: rgba(247, 242, 242, 0.966);
     padding: 100px;
     width: 1250px;
     height:500px;
@@ -68,6 +68,7 @@ body
     text-align: center;
     margin-left: 200px;
     box-shadow: 7px 6px rgb(211, 204, 204);
+    background-color: #fff;
 }
 
 .child2
